<resources>
    <string name="app_name">Lab1</string>
    <string name="enter_id">请输入学号</string>
    <string name="enter_password">密码:</string>
    <string name="hint_pass">请输入密码</string>
    <string name="register">注册</string>
    <string name="sign_in">登录</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="sysu_info">中山大学学生信息系统</string>
    <string name="student_id">学号:</string>
    <string name="imag">图片加载中</string>
</resources>
