<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.lab1.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/centerguide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="192dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:orientation="horizontal"
        android:text="@string/sysu_info"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/Image_view"
        android:layout_width="157dp"
        android:layout_height="135dp"
        android:src="@drawable/sysu"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
       />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="48dp"
        android:layout_height="33dp"
        android:textSize="18sp"
        android:text="@string/student_id"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="227dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/EditText1"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.372" />
    <EditText
        android:id="@+id/EditText1"
        android:layout_width="253dp"
        android:layout_height="41dp"
        android:textSize="18sp"
        android:inputType="number"
        android:hint="@string/enter_id"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/Image_view"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.932" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="48dp"
        android:layout_height="33dp"
        android:textSize="18sp"
        android:text="@string/enter_password"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/EditText2"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="194dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/TextView1"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintHorizontal_bias="0.372" />
    <EditText
        android:id="@+id/EditText2"
        android:layout_width="253dp"
        android:layout_height="41dp"
        android:orientation="horizontal"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:hint="@string/hint_pass"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/EditText1"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.93" />


    <Button
        android:id="@+id/button1"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/buttonshape"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="90dp"
        app:layout_constraintRight_toLeftOf="@+id/centerguide"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@drawable/buttonshape"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/centerguide"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText2"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:checked="true"
            android:text="@string/student"
           />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/teacher" />


    </RadioGroup>

</android.support.constraint.ConstraintLayout>
